--- a/vaadin-chart.js-addon/pom.xml
+++ b/vaadin-chart.js-addon/pom.xml
@@ -174,6 +174,20 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.14.1</version>
             </plugin>
+            <plugin>
+                <groupId>org.zeroturnaround</groupId>
+                <artifactId>jrebel-maven-plugin</artifactId>
+                <version>1.1.5</version>
+                <executions>
+                  <execution>
+                    <id>generate-rebel-xml</id>
+                    <phase>process-resources</phase>
+                    <goals>
+                      <goal>generate</goal>
+                    </goals>
+                  </execution>
+                </executions>
+              </plugin>
         </plugins>
 
         <!-- This is needed for the sources required by the client-side compiler to be
@@ -181,9 +195,10 @@
         <resources>
             <resource>
                 <directory>src/main/java</directory>
+                <!--
                 <excludes>
                     <exclude>rebel.xml</exclude>
-                </excludes>
+                </excludes>-->
             </resource>
             <resource>
                 <directory>src/main/resources</directory>
