--- a/vaadin-chart.js-demo/pom.xml
+++ b/vaadin-chart.js-demo/pom.xml
@@ -162,7 +162,20 @@
                     </webApp>
                 </configuration>
             </plugin>
-
+            <plugin>
+                <groupId>org.zeroturnaround</groupId>
+                <artifactId>jrebel-maven-plugin</artifactId>
+                <version>1.1.5</version>
+                <executions>
+                  <execution>
+                    <id>generate-rebel-xml</id>
+                    <phase>process-resources</phase>
+                    <goals>
+                      <goal>generate</goal>
+                    </goals>
+                  </execution>
+                </executions>
+              </plugin>
         </plugins>
     </build>
 
