--- a/vaadin-chart.js-addon/pom.xml
+++ b/vaadin-chart.js-addon/pom.xml
@@ -216,8 +216,9 @@
     </build>
 
     <scm>
-        <connection>scm:git:ssh://github.com/felixhusse/vaadin-chart.js.git</connection>
-        <developerConnection>scm:git:ssh://git@github.com/felixhusse/vaadin-chart.js.git</developerConnection>
+        
+        <connection>scm:git:git@github.com:felixhusse/vaadin-chart.js.git</connection>
+        <developerConnection>scm:git:git@github.com:felixhusse/vaadin-chart.js.git</developerConnection>
         <url>https://github.com/felixhusse/vaadin-chart.js.git</url>
     </scm>
 
