--- a/pom.xml
+++ b/pom.xml
@@ -2,8 +2,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.vaadin.addons</groupId>
-    <artifactId>vaadin-chart.js-parent</artifactId>
+    <groupId>de.fatalix</groupId>
+    <artifactId>chart.js-parent</artifactId>
     <packaging>pom</packaging>
     <version>1.0.1-SNAPSHOT</version>
     <name>Chart.js Add-on Parent Project ${project.version}</name>
@@ -12,6 +12,19 @@
         <module>vaadin-chart.js-addon</module>
         <module>vaadin-chart.js-demo</module>
     </modules>
+    
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <vaadin.version>7.6.1</vaadin.version>
+        <vaadin.plugin.version>${vaadin.version}</vaadin.plugin.version>
+    </properties>
+    
+    <scm>
+        <url>git://github.com/felixhusse/vaadin-chart.js.git</url>
+        <connection>scm:git:git://github.com/felixhusse/vaadin-chart.js.git</connection>
+        <developerConnection>scm:git:ssh://git@github.com:/felixhusse/vaadin-chart.js.git</developerConnection>
+        <tag>HEAD</tag>
+    </scm> 
     
     <organization>
         <name>fatalix</name>
@@ -37,6 +50,72 @@
             <distribution>repo</distribution>
         </license>
     </licenses>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>com.vaadin</groupId>
+                <artifactId>vaadin-server</artifactId>
+                <version>${vaadin.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.vaadin</groupId>
+                <artifactId>vaadin-client</artifactId>
+                <version>${vaadin.version}</version>
+                <scope>provided</scope>
+            </dependency>
+            
+            <dependency>
+                <groupId>com.vaadin</groupId>
+                <artifactId>vaadin-shared</artifactId>    
+                <version>${vaadin.version}</version>        
+            </dependency>
+            <dependency>
+                <groupId>com.vaadin</groupId>
+                <artifactId>vaadin-themes</artifactId>
+                <version>${vaadin.version}</version>            
+            </dependency>
+            <dependency>
+                <groupId>com.vaadin</groupId>
+                <artifactId>vaadin-client-compiled</artifactId>   
+                <version>${vaadin.version}</version>         
+            </dependency>
+            <dependency>
+                <groupId>javax.servlet</groupId>
+                <artifactId>javax.servlet-api</artifactId>
+                <version>3.0.1</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>joda-time</groupId>
+                <artifactId>joda-time</artifactId>
+                <version>2.3</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
     
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.5.1</version>
+            </plugin>
+        </plugins>  
+        <extensions>
+            <extension>
+                <groupId>org.apache.maven.wagon</groupId>
+                <artifactId>wagon-ssh-external</artifactId>
+                <version>1.0</version>
+            </extension>
+        </extensions>
+    </build>
+    
+     <distributionManagement>
+        <repository>
+            <id>release</id>
+            <name>release</name>
+            <url>file:C:/release/</url>
+        </repository>
+    </distributionManagement>
     
 </project>
